Adicionando comentarios no HTML

--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!--
+Autor: Jorge Marcelo
+Data de Criação: 12/08/2023
+Github: https://github.com/Jorge-Marcelo
+Linkedin: https://www.linkedin.com/in/jorge-marcelo-067a5017b/
+Instagram: https://www.instagram.com/10_stronger/
+Threads: https://www.threads.net/@10_stronger    
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,6 +18,8 @@
 </head>
 <body>
 <main>
+
+<!--Formulario-->
 <form>
 <h1>Timer</h1>
 <section>
@@ -18,7 +29,8 @@
 <span>:</span>
 <span id="segundos">00</span>
 </section>
-
+    
+<!--Botões de ação do formulario-->
 <table>
 <tr>
 <td>
@@ -74,18 +86,11 @@
 </table>
 </footer>
 
-
+<!--Animação-->
 <img src="assets/anim/Richiter.png">
 <img src="assets/anim/efect.png" class="efect">
-
 </form>
-
-
 </main>
-
-
-
-
 
 <script src='assets/js/script.js'></script>
 </body>
